<resources>
    <string name="app_name">score</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="new_label">Match Details</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="match_status">Match Status</string>
    <string name="score">Score</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="refresh">refresh</string>
    <string name="match_type">Match Type</string>

    <string name="team_a">Team A</string>
    <string name="vs">VS</string>
    <string name="team_b">Team B</string>
    <string name="set_won">set won</string>
    <string name="reset_all">Reset All</string>
    <string name="attack">Attack</string>
    <string name="block">Block</string>
    <string name="_0">0</string>
    <string name="sets_won">sets won</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="error">OP. ERROR</string>
    <string name="service">SRV. ACE</string>
    <string name="end_match">End Match</string>
    <string name="team_name_a">Enter Team A</string>
    <string name="team_name_b">Enter Team B</string>
    <string name="start">Start</string>
    <string name="toss_won_by">Toss Won By?</string>
    <string name="elected_to">elected to</string>
    <string name="chosen_to">Elected to?</string>
    <string name="ground">Ground</string>
    <string name="serve">Serve</string>
    <string name="scorecard">Scorecard</string>
    <string name="reset_score">Reset Score</string>
    <string name="chosen">Chosen</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="raid">Raid</string>
    <string name="court">Court</string>
    <string name="reset">Reset</string>
    <string name="all_out">All Out</string>
    <string name="extra_point">Extra Point</string>
    <string name="tackle_point">Tackle Point</string>
    <string name="raid_point">Raid Point</string>
    <string name="player_on_court">Player On Court</string>
    <string name="raid_time">Raid Time</string>
    <string name="_00_00">00:00</string>
    <string name="total_point">Total Points</string>
    <string name="result">Result</string>
    <string name="won_the_match_by">Won the match by</string>
    <string name="points">points</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="kickoff">KickOff</string>

    <string name="pause">Pause</string>
    <string name="goal">Goal</string>
    <string name="assist">Assist</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="foul">Foul</string>
    <string name="set_score_initial_a" translatable="false">0</string>
    <string name="set_score_initial_b" translatable="false">0</string>
    <string name="score_initial_a" translatable="false">0</string>
    <string name="score_initial_b" translatable="false">0</string>
    //Team names
    <string name="team_a_name">Team A</string>
    <string name="team_b_name">Team B</string>
    <string name="extra_time_1">Extra Time +1</string>
    <string name="email">Email</string>
    <string name="symbols">+</string>
    <string name="substitution">Substitution</string>
    <string name="shots">Shots</string>
    <string name="reset1">RESET</string>
    <string name="red">Red Card</string>
    <string name="yellow">Yellow</string>
    <string name="corner">Corner</string>
    <string name="_1st_half">1st Half</string>
    <string name="tostart">ToStart</string>
    <string name="topause">topause</string>
    <string name="extra_information">Extra Information</string>
    <string name="not_registered">not registered</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="already_registered">already registered</string>
    <string name="confirm_password">confirm password</string>
    <string name="home">Home</string>
    <string name="undo">undo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cricket">cricket</string>
    <string name="football">football</string>
    <string name="volleyball">volleyball</string>
    <string name="kabaddi">kabaddi</string>
    <string name="logout">Logout</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_create_tournament">CreateTournament</string>
    <string name="title_activity_edit_team">EditTeam</string>
    <string name="title_activity_flag_selection">FlagSelection</string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="title_activity_match_view">MatchView</string>
    <string name="title_activity_standings">StandingsActivity</string>
    <string name="title_activity_load_tournament">LoadTournament</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_flag_selection2">FlagSelection2</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="title_activity_home">Home</string>


    <string name="vsText">vs.</string>
    <string name="addText">Add</string>
    <string name="deleteText">Delete</string>
    <string name="saveText">Save</string>
    <string name="okText">OK</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="newTournamentText">New Tournament</string>
    <string name="loadTournamentText">Load Tournament</string>
    <string name="tournamentNameText">Tournament Name</string>
    <string name="formatText">Format</string>
    <string name="roundRobinText">Round Robin</string>
    <string name="singleEliminationText">Single Elimination</string>
    <string name="combinationText">Combination</string>
    <string name="gamesPerTeamText">Games per team:</string>
    <string name="teamsText">Teams</string>
    <string name="startTournamentText">Start Tournament</string>
    <string name="activateSyncingText">Activate Syncing</string>
    <string name="deactivateSyncingText">Deactivate Syncing</string>
    <string name="logInText">Log In</string>
    <string name="logOutText">Log Out</string>
    <string name="uploadText">Upload</string>
    <string name="downloadText">Download</string>
    <string name="teamNameText">Team Name</string>
    <string name="saveTeamText">Save Team</string>
    <string name="deleteTeamText">Delete Team</string>
    <string name="matchText">Match</string>
    <string name="matchesText">Matches</string>
    <string name="roundsText">Rounds</string>
    <string name="standingsText">Standings</string>
    <string name="numTeamsRequirement">Starting a tournament requires at least 3 teams.</string>
    <string name="confirmDeleteTournament">Are you sure you want to delete this tournament?</string>
    <string name="scoreText">Score:</string>
    <string name="tournament">Tournament</string>
    <string name="online">Online</string>
    <string name="team1">Team A:</string>
    <string name="team2">Team B:</string>
    <string name="batting_team">Batting Team</string>
    <string name="bowling_team">Bowling Team</string>
    <string name="overs">Overs:</string>
    <string name="no_of_overs_inning">No. of Overs/Inning</string>
    <string name="no_of_players_team">No. of Players/Team</string>
    <string name="players">Players:</string>
    <string name="six_run">Six Run</string>
    <string name="wicket">Wicket</string>
    <string name="four_run">Four Run</string>
    <string name="wides">Wides</string>
    <string name="three_run">Three Run</string>
    <string name="no_ball">No Ball</string>
    <string name="two_run">Two Run</string>
    <string name="one_run">One Run</string>
    <string name="leg_byes">Leg Byes</string>
    <string name="byes">Byes</string>
    <string name="this_over">[THIS OVER OVERVIEW]</string>
    <string name="score_overview"><u><b>[SCORE OVERVIEW]</b></u></string>
    <string name="ball_overview"><u><b>[OVER/BALL OVERVIEW]</b></u></string>
    <string name="Team1_name"><u>[Name Team1]</u></string>
    <string name="Team2_name">[Name Team2]</string>
    <string name="Team1_score">[score Team1]</string>
    <string name="Team2_score">[score Team2]</string>
    <string name="Team1_ball">[ball/over Team1]</string>
    <string name="Team2_ball">[ball/over Team2]</string>
    <string name="zero_run">Zero Run</string>
    <string name="stats">Stats</string>
    <string name="new_match">New Match</string>
    <string name="Team1_btn">Details</string>
    <string name="Team2_btn">Details</string>
    <string name="max_over">[MAX OVER]</string>
    <string name="max_players">[MAX PLAYERS]</string>
    <string name="over">Over:</string>
    <string name="runs">Runs:</string>
    <string name="add_team">Add Team</string>
    <string name="write_your_score">write your score</string>
    <string name="colombia">Colombia</string>
    <string name="argentina">Argentina</string>
    <string name="view_rounds">View Rounds</string>
    <string name="delete_tournament">Delete Tournament</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="sample">Sample</string>
    <string name="finished">Finished</string>
    <string name="_14">14</string>
    <string name="runs_1">[Runs]</string>
    <string name="extra">[Extra]</string>

    <string name="delete_name">Delete Name</string>
    <string name="randomize">Randomize</string>
    <string name="preset_options">Preset Options</string>
    <string name="current_preset">Preset:\u0020</string>
    <string name="current_preset2">Current Preset:\u0020</string>
    <string name="player_list"><u>List of Players</u></string>
    <string name="total_players">Total Players:\u0020</string>
    <string name="no_saved_presets">There are no saved presets.</string>
    <string name="number_of_teams"># of Teams…</string>
    <string name="enter_preset_name_hint">Enter Preset Name… 1–26 char</string>
    <string name="enter_name_hint">Enter Name… 1–26 char</string>
    <string name="none">None</string>
    <string name="empty">Empty</string>
    <string name="del_name_header"><b>Delete Name</b></string>
    <string name="del_preset_header"><b>Delete Preset</b></string>
    <string name="load_preset_header"><b>Load/View Preset</b></string>
    <string name="view_preset_header"><b>View Preset</b></string>
    <string name="randomize_header"><b>Randomize</b></string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="load_preset">Load Preset</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="randomize_again">Randomize Again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admob_unit_id">YOUR_AD_MOB_UNIT_ID</string>
    <string name="there_are_no_presets_to_delete">There are no presets to delete.</string>
    <string name="add">Add</string>
    <string name="preset">Preset:</string>
    <string name="team_generator">Team Generator</string>
    <string name="fantasy_tip">Fantasy Tip</string>
    <string name="enter_number_of_teams">Enter Number of Teams:</string>
    <string name="live_scores">Live Scores</string>
</resources>