<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/toss1"
        android:title="Toss"
        android:icon="@drawable/ic_thumb"/>

    <item
        android:id="@+id/Schedule"
        android:title="@string/tournament"
        android:icon="@drawable/ic_schedule"/>
    <item
        android:id="@+id/fantasy"
        android:title="@string/fantasy_tip"
        android:icon="@drawable/ic_fantasy"/>
    <item
        android:id="@+id/generator"
        android:title="@string/team_generator"
        android:icon="@drawable/ic_team_generator"/>
    <item
        android:id="@+id/Logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
</menu>