<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="7dp">
    
<RelativeLayout 
    android:id="@+id/rlLabels"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/tvPlayerListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvCurrentPreset"
        android:layout_marginStart="5dp"
        android:text="@string/player_list"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvPresetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:text="@string/current_preset" 
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvCurrentPreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/tvTotalLabel"
        android:layout_toEndOf="@id/tvPresetLabel"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/none"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/tvTotalPlayers"
        android:text="@string/total_players"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvTotalPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="@string/_0"
        android:textSize="16sp"/>
   
</RelativeLayout>

    <EditText
        android:id="@+id/etPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llDelAdd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:imeOptions="actionNone"
        android:inputType="textPersonName"
        tools:ignore="Autofill">
    </EditText>

    <ScrollView
        android:id="@+id/svScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etPlayerName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rlLabels"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fillViewport="true" >

        <LinearLayout
            android:id="@+id/llPlayerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPlayerList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:text="@string/add"
        android:id="@+id/add_action_button"
        style="@style/buttonStyle6"
        android:layout_above="@+id/etPlayerName"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/llDelAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llPresetRandom"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bDelName"
            style="@style/Random"
            android:text="@string/delete_name"/>

        <View
            android:layout_width="7dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/bRandomize"
            style="@style/Random"
            android:text="@string/randomize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPresetRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/bPresetOptions"
            android:text="@string/preset_options"
            style="@style/Random"/>
    </LinearLayout>
</RelativeLayout>