<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sports1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <EditText
            style="@style/textViewStyle2"
            android:id="@+id/e1"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/team_name_a"
            android:autofillHints="" />

        <EditText
            style="@style/textViewStyle2"
            android:id="@+id/e2"
            android:layout_width="match_parent"
            android:layout_marginTop="6dp"
            android:inputType="text"
            android:hint="@string/team_name_b"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/e3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/toss_won_by"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:autofillHints="" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

            <RadioButton
                style="@style/radioButton"
                android:id="@+id/radioButton"
                android:hint="@string/team_a"
                android:checked="true" />

            <RadioButton
                style="@style/radioButton"
                android:id="@+id/radioButton2"
                android:hint="@string/team_b"
                android:checked="false"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/e4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chosen_to"
                android:textSize="17sp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:autofillHints="" />

        </LinearLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal"
            android:id="@+id/radioGroup1">

            <RadioButton
                style="@style/radioButton"
                android:id="@+id/radioButton3"
                android:text="@string/court"
                android:checked="true"/>

            <RadioButton
                style="@style/radioButton"
                android:id="@+id/radioButton4"
                android:text="@string/raid"
                android:checked="false" />
        </RadioGroup>
        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/start"
            android:enabled="false"
            android:background="@drawable/btn_corner"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>