<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/etSavePreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/enter_preset_name_hint"
        android:inputType="textPersonName"
        tools:ignore="Autofill">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSavePreset"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bCancelSave"
            style="@style/Random"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/bSavePresetAs"
            style="@style/Random"
            android:text="@string/save"/>
    </LinearLayout>
</RelativeLayout>